add background music

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>HTML boilerplate</title>
-        <link rel="stylesheet" href="./style.css">
-        <script src="./javascript.js" defer></script>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>HTML boilerplate</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./javascript.js" defer></script>
+</head>
+
+<body>
+    <audio autoplay>
+        <source src="./files/Drawful.mp3" type="audio/mp3">
+    </audio>
+
+</body>
+
 </html>
