--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <audio autoplay>
+    <audio autoplay loop muted>
         <source src="./files/Drawful.mp3" type="audio/mp3">
     </audio>
 
