place all functions in prototypes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <audio autoplay loop muted>
+
+    <div id="zoomfield">
+    </div>
+    <!--<audio autoplay loop muted>
         <source src="./files/Drawful.mp3" type="audio/mp3">
-    </audio>
+    </audio>-->
 
 </body>
 
