change size to Math.PHI, add audio files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <button id="musicBtn">toggle sound
+        <script>
+
+        </script>
+    </button>
+
     <div id="zoomfield">
     </div>
     <!--<audio autoplay loop muted>
