add btn and input, give background randomRgb

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 
 <body>
 
-    <button id="musicBtn">toggle sound
-        <script>
-
-        </script>
+    <button id="resetBtn">reset field
     </button>
+    <input type="number" min="0" max="510" id="deviationInput">
 
-    <div id="zoomfield">
+    <div id="contentDiv">
     </div>
     <!--<audio autoplay loop muted>
         <source src="./files/Drawful.mp3" type="audio/mp3">
