update css formatting, add a few html elements

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <body>
 
-    <button id="resetBtn">reset field
-    </button>
-    <input type="number" min="0" max="510" id="deviationInput">
-
-    <div id="contentDiv">
+    <div id="allDiv">
+        <div id="interface">
+            <button id="resetBtn">reset field
+            </button>
+            <input type="number" min="0" max="510" id="deviationInput">
+        </div>
+        <div id="contentDiv">
+        </div>
     </div>
     <!--<audio autoplay loop muted>
         <source src="./files/Drawful.mp3" type="audio/mp3">
