add lightenRgb for UI, clean up some functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div id="interface">
             <button id="resetBtn">reset field
             </button>
-            <input type="number" min="0" max="510" id="deviationInput">
+            <input type="number" min="0" max="510" id="deviationInput" placeholder="0-510"
+                title="add color deviation. Valid values are between 0 and 510">
         </div>
         <div id="contentDiv">
         </div>
