--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div id="allDiv">
         <div id="interface">
+            <button id="audioBtn">play audio</button>
             <button id="resetBtn">reset field
             </button>
             <input type="number" min="0" max="510" id="deviationInput" placeholder="0-510"
