--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HTML boilerplate</title>
+    <title>HoverColors</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./javascript.js" defer></script>
 </head>
